# grepit

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
crates/context/: Cargo.toml
crates/context/src/: lib.rs  merge.rs  window.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  cli.rs  main.rs
crates/core/tests/: integration.rs
crates/output/: Cargo.toml
crates/output/src/: compact.rs  human.rs  json.rs  jsonl.rs  lib.rs
crates/ranker/: Cargo.toml
crates/ranker/src/: lib.rs  scorer.rs  signals.rs
crates/searcher/src/: engine.rs  filter.rs  lib.rs  matcher.rs
crates/tokens/src/: estimator.rs  lib.rs
crates/walker/src/: filetype.rs  lib.rs  walk.rs
mcp/: index.js  package-lock.json  package.json
npm/grep4ai/: install.js  package.json
npm/grep4ai-darwin-arm64/: package.json
npm/grep4ai-darwin-x64/: package.json
npm/grep4ai-linux-arm64/: package.json
npm/grep4ai-linux-x64/: package.json
npm/grep4ai-win32-x64/: package.json
npm/grepit/: install.js  package.json
npm/grepit-darwin-arm64/: package.json
npm/grepit-darwin-x64/: package.json
npm/grepit-linux-arm64/: package.json
npm/grepit-linux-x64/: package.json
npm/grepit-win32-x64/: package.json
