[workspace]
members = [
    "crates/core",
    "crates/searcher",
    "crates/ranker",
    "crates/context",
    "crates/output",
    "crates/tokens",
    "crates/walker",
]
resolver = "2"

[workspace.package]
version = "0.4.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItzDevoo/grep4ai"
description = "The fastest grep tool built for AI agents"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
thiserror = "2"
rayon = "1"
crossbeam-channel = "0.5"
memchr = "2"
memmap2 = "0.9"
ignore = "0.4"
clap = { version = "4", features = ["derive", "env"] }

# Workspace internal crates
grep4ai-searcher = { path = "crates/searcher" }
grep4ai-ranker = { path = "crates/ranker" }
grep4ai-context = { path = "crates/context" }
grep4ai-output = { path = "crates/output" }
grep4ai-tokens = { path = "crates/tokens" }
grep4ai-walker = { path = "crates/walker" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
